--- a/recovery/root/init.recovery.mt6765.rc
+++ b/recovery/root/init.recovery.mt6765.rc
@@ -1,6 +1,13 @@
+import /keymint.service.mitee.rc
+import /tee-supplicant.rc
+import /miteelog.rc
+
 on init
     setprop sys.usb.configfs 1
+    setprop sys.usb.controller "11201000.usb0"
     setprop sys.usb.ffs.aio_compat 1
+    export LD_LIBRARY_PATH /system/lib:/vendor/lib:/vendor/lib/hw
+    setprop crypto.ready 1
 
 on fs && property:ro.debuggable=0
     # distinguish USB shoulde connect or not, i.e. CDP vs SDP
@@ -8,7 +15,17 @@ on fs && property:ro.debuggable=0
     # set charging free due to it wait for USB activation
     start adbd
 
+# We need vold early for metadata encryption
+on early-fs
+    start vold
+
+on late-fs
+    # Mount RW partitions which need run fsck
+    mount_all /first_stage_ramdisk/fstab.mt6765 --late
+
 on post-fs
+ start boot-hal-1-2
+
     # Support A/B feature for emmc boot region
     symlink /dev/block/sda /dev/block/mmcblk0boot0
     symlink /dev/block/sdb /dev/block/mmcblk0boot1
@@ -18,3 +35,37 @@ on post-fs
     symlink /dev/block/mmcblk0boot1 /dev/block/by-name/preloader_b
 
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
+
+on property:crypto.ready=1
+    start vendor.keymint-mitee
+
+on property:hwservicemanager.ready=true
+    start vendor.keymint-mitee
+    start vendor.gatekeeper-1-0
+
+on property:ro.crypto.state=unsupported
+    stop vendor.keymint-mitee
+    stop vendor.gatekeeper-1-0
+    stop tee-supplicant
+    stop miteelog
+
+on property:ro.crypto.state=unencrypted
+    stop vendor.keymint-mitee
+    stop vendor.gatekeeper-1-0
+    stop tee-supplicant
+    stop miteelog
+
+on property:twrp.decrypt.done=true
+    stop vendor.keymint-mitee
+    stop vendor.gatekeeper-1-0
+    stop tee-supplicant
+    stop miteelog
+    
+on property:crypto.ready=0
+    stop vendor.keymint-mitee
+    stop vendor.gatekeeper-1-0
+    stop tee-supplicant
+    stop miteelog
+
+
+
