--- a/recovery/root/init.recovery.mt6765.rc
+++ b/recovery/root/init.recovery.mt6765.rc
@@ -9,6 +9,9 @@ on init
     export LD_LIBRARY_PATH /system/lib:/vendor/lib:/vendor/lib/hw
     setprop crypto.ready 1
 
+on fs
+    install_keyring
+
 on fs && property:ro.debuggable=0
     # distinguish USB shoulde connect or not, i.e. CDP vs SDP
     write /sys/class/udc/musb-hdrc/device/cmode 2
@@ -67,5 +70,6 @@ on property:crypto.ready=0
     stop tee-supplicant
     stop miteelog
 
-
-
+on boot
+    start health-hal-2-1
+    setprop sys.usb.config adb
