--- a/recovery/root/miteelog.rc
+++ b/recovery/root/miteelog.rc
@@ -1,5 +1,8 @@
 service miteelog /vendor/bin/miteelog
     class core
+    user root
+    group root
+    seclabel u:r:recovery:s0
     disabled
 
 on post-fs-data
