--- a/recovery/root/init.recovery.mt6765.rc
+++ b/recovery/root/init.recovery.mt6765.rc
@@ -39,37 +39,83 @@ on post-fs
     symlink /dev/block/mmcblk0boot1 /dev/block/by-name/preloader_b
 
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
+    start mtk.plpath.utils.link
 
-on property:crypto.ready=1
-    start vendor.keymint-mitee
+service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
+    class main
+    user root
+    group root system
+    disabled
+    oneshot
+    seclabel u:r:recovery:s0
+
+service vendor.gatekeeper-1-0 /vendor/bin/hw/android.hardware.gatekeeper@1.0-service
+    interface android.hardware.gatekeeper@1.0::IGatekeeper default
+    class hal
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+
+service vendor.keymint-mitee /vendor/bin/hw/android.hardware.security.keymint@1.0-service.mitee
+	class early_hal
+	user system
+	group system drmrpc
+	disabled
+	seclabel u:r:recovery:s0
+
+service tee-supplicant /vendor/bin/tee-supplicant
+    class core
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+
+service keymaster_attestation-1-1 /vendor/bin/hw/vendor.mediatek.hardware.keymaster_attestation@1.1-service
+    interface vendor.mediatek.hardware.keymaster_attestation@1.0::IKeymasterDevice default
+    interface vendor.mediatek.hardware.keymaster_attestation@1.1::IKeymasterDevice default
+    class hal
+    user system
+    group system
+    disabled
+
+service miteelog /vendor/bin/miteelog
+    class core
+    user root
+    group root
+    seclabel u:r:recovery:s0
+    disabled
 
 on property:hwservicemanager.ready=true
     start vendor.keymint-mitee
     start vendor.gatekeeper-1-0
+    start tee-supplicant
+    start keymaster_attestation-1-1
+    start miteelog
 
 on property:ro.crypto.state=unsupported
     stop vendor.keymint-mitee
     stop vendor.gatekeeper-1-0
     stop tee-supplicant
+    stop keymaster_attestation-1-1
     stop miteelog
+    stop hwservicemanager
 
 on property:ro.crypto.state=unencrypted
     stop vendor.keymint-mitee
     stop vendor.gatekeeper-1-0
     stop tee-supplicant
     stop miteelog
+    stop keymaster_attestation-1-1
+    stop hwservicemanager
 
 on property:twrp.decrypt.done=true
     stop vendor.keymint-mitee
     stop vendor.gatekeeper-1-0
     stop tee-supplicant
     stop miteelog
-    
-on property:crypto.ready=0
-    stop vendor.keymint-mitee
-    stop vendor.gatekeeper-1-0
-    stop tee-supplicant
-    stop miteelog
+    stop keymaster_attestation-1-1
+    stop hwservicemanager
 
 on boot
     start health-hal-2-1
