water: Add support for Decryption

--- a/recovery/root/init.recovery.mt6765.rc
+++ b/recovery/root/init.recovery.mt6765.rc
@@ -3,6 +3,7 @@ import /tee-supplicant.rc
 import /miteelog.rc
 import /snapuserd.rc
 import /keymaster_attestation@1.1-service.rc
+import /init.recovery.usb.rc
 
 on init
     setprop sys.usb.configfs 1
