--- a/recovery/root/init.recovery.mt6765.rc
+++ b/recovery/root/init.recovery.mt6765.rc
@@ -1,3 +1,7 @@
+mport /keymint.service.mitee.rc
+import /tee-supplicant.rc
+import /miteelog.rc
+import /snapuserd.rc
 import /keymaster_attestation@1.1-service.rc
 
 on init
@@ -37,6 +41,36 @@ on post-fs
 
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
 
+
+service vendor.gatekeeper-1-0 /vendor/bin/hw/android.hardware.gatekeeper@1.0-service
+    interface android.hardware.gatekeeper@1.0::IGatekeeper default
+    class hal
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+
+service vendor.keymint-mitee /vendor/bin/hw/android.hardware.security.keymint@1.0-service.mitee
+	class early_hal
+	user system
+	group system drmrpc
+	disabled
+	seclabel u:r:recovery:s0
+
+service tee-supplicant /vendor/bin/tee-supplicant
+    class core
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+
+service miteelog /vendor/bin/miteelog
+    class core
+    user root
+    group root
+    seclabel u:r:recovery:s0
+    disabled
+
 service keymaster_attestation-1-1 /vendor/bin/hw/vendor.mediatek.hardware.keymaster_attestation@1.1-service
     interface vendor.mediatek.hardware.keymaster_attestation@1.0::IKeymasterDevice default
     interface vendor.mediatek.hardware.keymaster_attestation@1.1::IKeymasterDevice default
@@ -47,20 +81,37 @@ service keymaster_attestation-1-1 /vendor/bin/hw/vendor.mediatek.hardware.keymas
     seclabel u:r:recovery:s0
 
 on property:hwservicemanager.ready=true
+    start vendor.keymint-mitee
+    start vendor.gatekeeper-1-0
+    start tee-supplicant
     start keymaster_attestation-1-1
+    start miteelog
     start hwservicemanager
 
 
 on property:ro.crypto.state=unsupported
+    stop vendor.keymint-mitee
+    stop vendor.gatekeeper-1-0
+    stop tee-supplicant
     stop keymaster_attestation-1-1
+    stop miteelog
     stop hwservicemanager
 
 on property:ro.crypto.state=unencrypted
+    stop vendor.keymint-mitee
+    stop vendor.gatekeeper-1-0
+    stop tee-supplicant
     stop keymaster_attestation-1-1
+    stop miteelog
     stop hwservicemanager
 
+
 on property:twrp.decrypt.done=true
+    stop vendor.keymint-mitee
+    stop vendor.gatekeeper-1-0
+    stop tee-supplicant
     stop keymaster_attestation-1-1
+    stop miteelog
     stop hwservicemanager
 
 on boot
