--- a/recovery/root/init.rc
+++ b/recovery/root/init.rc
@@ -1,4 +1,4 @@
-import /init.recovery.${ro.hardware}.rc
+import /init.recovery.mt6765.rc
 
 on early-init
     # Set the security context of /postinstall if present.
